--- a/www/skin/tmpl/index.tmpl
+++ b/www/skin/tmpl/index.tmpl
@@ -1,14 +1,11 @@
 {extends file="page.tmpl"}
-<!-- index.tmpl in asimov -->
+<!-- index.tmpl in empyre -->
 {block name="head" append}
-{*<link rel="stylesheet" type="text/css" href="{$smarty.const.SKINDIR}css/accordian.css" media="screen" />*}
-{*<script defer src="{$smarty.const.JSURL}accordian.js"></script>*}
-{* <script src="{$smarty.const.JSURL}achilles.js"></script> *}
-<link rel="stylesheet" type="text/css" href="{$smarty.const.SKINDIR}css/asimov.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="{$smarty.const.SKINDIR}css/empyre.css" media="screen" />
 {/block}
-{block name="title"}asimov{/block}
+{block name="title"}empyre{/block}
 {block name="content"}
 {include file="sections/overview.tmpl"}
-{include file="sections/dependencies.tmpl"}
-{include file="sections/features.tmpl"}
+{*{include file="sections/dependencies.tmpl"}*}
+{*{include file="sections/features.tmpl"}*}
 {/block} {* content *}
