--- a/www/skin/tmpl/page.tmpl
+++ b/www/skin/tmpl/page.tmpl
@@ -2,14 +2,14 @@
 <html lang="en-us" id="html">
 <head id="head" itemscope itemtype="https://schema.org/WebSite">
 {block name="head"}
-<!-- page.tmpl in asimov -->
+<!-- page.tmpl in empyre -->
 <meta charset="utf-8">
 <script src="https://kit.fontawesome.com/684c5b77b8.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" type="text/css" href="{$smarty.const.STATICSKINURL}css/animate.css" media="screen" >
-<link rel="stylesheet" type="text/css" href="/asimov/skin/css/blurb.css" {*{$smarty.const.STATICSKINURL}css/blurb.css"*} media="screen" >
-<link rel="stylesheet" type="text/css" href="{$smarty.const.STATICSKINURL}css/pageheader.css" media="screen" >
+{* <link rel="stylesheet" type="text/css" href="{$smarty.const.STATICSKINURL}css/animate.css" media="screen" *}
+<link rel="stylesheet" type="text/css" href="/empyre/skin/css/blurb.css" {*{$smarty.const.STATICSKINURL}css/blurb.css"*} media="screen" >
+<link rel="stylesheet" type="text/css" href="/empyre/skin/css/pageheader.css" media="screen" >
 <link rel="stylesheet" type="text/css" href="{$smarty.const.STATICSKINURL}css/pagefooter.css" media="screen" >
-<link rel="stylesheet" type="text/css" href="/skin/css/asimov.css" media="screen" >
+<link rel="stylesheet" type="text/css" href="/empyre/skin/css/empyre.css" media="screen" >
 <link rel="stylesheet" type="text/css" href="{$smarty.const.STATICSKINURL}css/breadcrumbs.css" media="screen" >
 <link rel="stylesheet" type="text/css" href="{$smarty.const.STATICSKINURL}css/actions.css" media="screen" >
 <link rel="stylesheet" type="text/css" href="{$smarty.const.STATICSKINURL}css/page.css" media="screen" >
@@ -28,7 +28,7 @@
 
 <script defer src="{$smarty.const.ENGINEURL}js/topbar.js" type="text/javascript"></script>
 
-<title>asimov - robotics, ai, and augmented reality</title>
+<title>empyre</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta name="description" content="project asimov: robotics, ai, and augmented reality" >
 
