--- a/www/skin/tmpl/pageheader.tmpl
+++ b/www/skin/tmpl/pageheader.tmpl
@@ -1,8 +1,8 @@
 <header id="pageheader" class="blurb">
 {block name="pageheader"}
 <div class="body">
- <h1>project asimov</h1>
- <h3 class="est2002">~ est. 2025 ~</h3>
+ <h1>empyre</h1>
+ <h3 class="est2002">~ est. 2021 ~</h3>
 </div> {* body *}
 {/block}
 </header>
